# AutoAnki-SLA

./: .env.example  .gitignore  AutoAnki-SLA-technical-plan.md  AutoAnki-Technical-Plan-v2.md  README.md  anki-css-styling.md  chapter9.txt  flashcard-philosophy.md  pyproject.toml  test.txt  test_output.apkg  test_output.json
Lessons/: Chapter10.txt  chater-11.txt
PreviousVocab/: pastvocab_example.txt
docs/: getting-started.md
prompts/: card_drafting.txt  card_review.txt  structuring.txt
src/Planning/: flashcard-schema-template.json
src/autoanki/: __init__.py  __main__.py  cli.py  deck_builder.py  llm.py  models.py  parser.py  tts.py
src/autoanki/core/: __init__.py  deck_builder.py  llm.py  models.py  parser.py  project.py  tts.py
src/autoanki/prompts/: card_drafting.txt  card_review.txt  structuring.txt
src/autoanki/templates/: __init__.py  anki_models.py
src/autoanki/tui/: __init__.py  app.py
src/autoanki/tui/screens/: __init__.py  config_screen.py  export.py  home.py  import_screen.py  review.py
src/autoanki/tui/widgets/: __init__.py  card_editor.py
tests/: __init__.py  test_anki_models.py  test_deck_builder.py  test_llm.py  test_models.py  test_parser.py  test_pipeline.py  test_project.py  test_tts.py
